[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/hand_back.tres" type="Texture" id=1]
[ext_resource path="res://assets/orb-Sheet.png" type="Texture" id=2]
[ext_resource path="res://src/game/ui/HandButton.gd" type="Script" id=3]
[ext_resource path="res://assets/font/text_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/font/Last Spaceship.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0.215686, 0.145098, 0.219608, 1 )
extra_spacing_top = -5
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Hand:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Orb:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Orb:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisualInstance:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "disable"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.247059, 0.247059, 0.247059, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Hand:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance/Orb:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisualInstance/Orb:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "focus"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VisualInstance/Hand:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VisualInstance/Orb:z_index")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ -1, 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisualInstance/Orb:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisualInstance:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.6, 1.6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisualInstance:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="HandButton" type="TextureButton"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
script = ExtResource( 3 )

[node name="VisualInstance" type="Node2D" parent="."]
position = Vector2( 16, 12 )
__meta__ = {
"_editor_description_": "
"
}

[node name="Hand" type="Sprite" parent="VisualInstance"]
position = Vector2( 0, 4 )
texture = ExtResource( 1 )

[node name="Orb" type="Sprite" parent="VisualInstance"]
texture = ExtResource( 2 )
hframes = 4
vframes = 2

[node name="Count" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -6.0
margin_right = -4.0

[node name="Amount" type="Label" parent="Count"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -1.5
margin_bottom = 1.5
custom_colors/font_color = Color( 1, 0.501961, 0.666667, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 2
valign = 1
uppercase = true

[node name="KeyNum" type="Label" parent="Count"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.0
margin_top = 5.0
margin_right = 11.0
margin_bottom = 8.0
rect_scale = Vector2( 1.4, 1.4 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/disable = SubResource( 4 )
anims/focus = SubResource( 1 )

[connection signal="focus_entered" from="." to="." method="_on_HandButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_HandButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_HandButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_HandButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_HandButton_pressed"]
